fix: use raw REST calls for opensearch get repository
- add unit tests for OpenSearchSnapshotOperations

Related with #17552