@@ -18,10 +18,10 @@ package io.camunda.operate.store.opensearch.client.sync;
 
 import static java.lang.String.format;
 
+import io.camunda.operate.exceptions.OperateRuntimeException;
 import io.camunda.operate.store.opensearch.response.OpenSearchGetSnapshotResponse;
 import io.camunda.operate.store.opensearch.response.OpenSearchSnapshotInfo;
 import io.camunda.operate.store.opensearch.response.SnapshotState;
-import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 import org.opensearch.client.opensearch.OpenSearchClient;
@@ -34,16 +34,39 @@ public class OpenSearchSnapshotOperations extends OpenSearchSyncOperation {
     super(logger, openSearchClient);
   }
 
-  public GetRepositoryResponse getRepository(final GetRepositoryRequest.Builder requestBuilder)
-      throws IOException {
-    return openSearchClient.snapshot().getRepository(requestBuilder.build());
+  public Map<String, Object> getRepository(final GetRepositoryRequest.Builder requestBuilder) {
+    final var request = requestBuilder.build();
+    final var names = request.name();
+    if (names.isEmpty()) {
+      throw new OperateRuntimeException("Get repository needs at least one name.");
+    }
+    if (names.size() > 1) {
+      logger.warn(
+          "More than one repository names given: {} . Use only first one: {}",
+          names,
+          names.getFirst());
+    }
+    final var repository = names.getFirst();
+    return withExtendedOpenSearchClient(
+        extendedOpenSearchClient ->
+            safe(
+                () ->
+                    extendedOpenSearchClient.arbitraryRequest(
+                        "GET", String.format("/_snapshot/%s", repository), "{}"),
+                e -> format("Failed to get repository %s", repository)));
   }
 
-  public OpenSearchGetSnapshotResponse get(final GetSnapshotRequest.Builder requestBuilder)
-      throws IOException {
+  public OpenSearchGetSnapshotResponse get(final GetSnapshotRequest.Builder requestBuilder) {
     final var request = requestBuilder.build();
     final var repository = request.repository();
-    final var snapshot = request.snapshot().get(0);
+    final var snapshots = request.snapshot();
+    if (snapshots.size() > 1) {
+      logger.warn(
+          "More than one snapshot names given: {} . Use only first one: {}",
+          snapshots,
+          snapshots.getFirst());
+    }
+    final var snapshot = snapshots.getFirst();
     final var result =
         withExtendedOpenSearchClient(
             extendedOpenSearchClient ->
